doctors. Add doctors list and editor

--- a/Diagnosis.App/App.config
+++ b/Diagnosis.App/App.config
@@ -78,6 +78,9 @@
       <setting name="MainWindowState" serializeAs="String">
         <value>Normal</value>
       </setting>
+      <setting name="LoginRememberedDoctorId" serializeAs="String">
+        <value />
+      </setting>
     </Diagnosis.App.Properties.Settings>
   </userSettings>
 </configuration>
