--- a/Diagnosis.App/Properties/Settings.settings
+++ b/Diagnosis.App/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="MainWindowState" Type="System.Windows.WindowState" Scope="User">
       <Value Profile="(Default)">Normal</Value>
     </Setting>
+    <Setting Name="LoginRememberedDoctorId" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
