--- a/Diagnosis.Data/Diagnosis.Data.csproj
+++ b/Diagnosis.Data/Diagnosis.Data.csproj
@@ -226,9 +226,7 @@
   <ItemGroup>
     <EmbeddedResource Include="Versions\Sql\insert_Uom_HrCat_Speciality.sql" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Repositories\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
