xaml. Single date converter file

--- a/Diagnosis.App/Diagnosis.App.csproj
+++ b/Diagnosis.App/Diagnosis.App.csproj
@@ -346,12 +346,11 @@
     </Compile>
     <Compile Include="Converters\NullToVis.cs" />
     <Compile Include="Converters\LessThanConverter.cs" />
-    <Compile Include="Converters\DateIntervalLabel.cs" />
+    <Compile Include="Converters\DateLabels.cs" />
     <Compile Include="Converters\IsLastItem.cs" />
     <Compile Include="Converters\EqualityToBool.cs" />
     <Compile Include="Converters\ManToShortName.cs" />
     <Compile Include="Converters\Summator.cs" />
-    <Compile Include="Converters\DateUnitToLabel.cs" />
     <Compile Include="Converters\BooleanConverter.cs" />
     <Compile Include="Converters\BoolToSexSign.cs" />
     <Compile Include="Converters\IntToString.cs" />
