--- a/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
+++ b/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
@@ -153,6 +153,7 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -167,6 +168,10 @@
     <Compile Include="Framework\Services\FileDialogService.cs" />
     <Compile Include="Framework\IDialog.cs" />
     <Compile Include="Framework\Services\FileType.cs" />
+    <Compile Include="Framework\XmlnsDefinitions\Diagnosis.Common.cs" />
+    <Compile Include="Framework\XmlnsDefinitions\Diagnosis.ViewModels.Search.Autocomplete.cs" />
+    <Compile Include="Framework\XmlnsDefinitions\Diagnosis.ViewModels.Search.cs" />
+    <Compile Include="Framework\XmlnsDefinitions\Diagnosis.ViewModels.Screens.cs" />
     <Compile Include="Screens\Card\HolderViewModel.cs" />
     <Compile Include="Screens\Card\MeasureEditorViewModel.cs" />
     <Compile Include="Screens\Doctors\DoctorsListViewModel.cs" />
@@ -254,6 +259,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Framework\CodeMap1.dgml" />
+    <Compile Include="Framework\XmlnsDefinitions\Diagnosis.ViewModels.cs" />
     <None Include="packages.config" />
     <None Include="Screens\Card\Card.cd" />
     <None Include="Search\Autocomplete\CodeMap1.dgml" />
