code. Move viewmodels

--- a/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
+++ b/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
@@ -172,7 +172,7 @@
     <Compile Include="Framework\XmlnsDefinitions\Diagnosis.ViewModels.Search.cs" />
     <Compile Include="Framework\XmlnsDefinitions\Diagnosis.ViewModels.Screens.cs" />
     <Compile Include="Screens\Card\HolderViewModel.cs" />
-    <Compile Include="Screens\Card\MeasureEditorViewModel.cs" />
+    <Compile Include="Search\Autocomplete\MeasureEditorViewModel.cs" />
     <Compile Include="Screens\Doctors\DoctorsListViewModel.cs" />
     <Compile Include="Screens\Doctors\DoctorEditorViewModel.cs" />
     <Compile Include="Screens\Doctors\DoctorViewModel.cs" />
@@ -182,29 +182,29 @@
     <Compile Include="Screens\Card\CardItemViewModel.cs" />
     <Compile Include="Screens\Card\CourseEditorViewModel.cs" />
     <Compile Include="Screens\Card\CardViewModel.cs" />
-    <Compile Include="Screens\Card\CourseViewModel.cs" />
+    <Compile Include="Screens\Card\Holders\CourseViewModel.cs" />
     <Compile Include="Screens\Card\HrListViewModel.cs" />
     <Compile Include="Screens\Card\Managers\AppointmentsManager.cs" />
     <Compile Include="Screens\Card\ShortHealthRecordViewModel.cs" />
-    <Compile Include="Screens\Card\ShortAppointmentViewModel.cs" />
-    <Compile Include="Screens\Card\ShortCourseViewModel.cs" />
-    <Compile Include="Screens\Card\PatientViewModel.cs" />
+    <Compile Include="Screens\Card\Holders\ShortAppointmentViewModel.cs" />
+    <Compile Include="Screens\Card\Holders\ShortCourseViewModel.cs" />
+    <Compile Include="Screens\Card\Holders\PatientViewModel.cs" />
     <Compile Include="Screens\Card\Managers\HrViewer.cs" />
     <Compile Include="Framework\ScreenBase.cs" />
     <Compile Include="Screens\Shell\OverlayServiceViewModel.cs" />
     <Compile Include="Screens\Shell\UndoOverlayViewModel.cs" />
     <Compile Include="Screens\Words\WordEditorViewModel.cs" />
     <Compile Include="Search\Exporter.cs" />
-    <Compile Include="Search\IcdSelectorViewModel.cs" />
+    <Compile Include="Search\Autocomplete\IcdSelectorViewModel.cs" />
     <Compile Include="Search\HrHolderSearchResultViewModel.cs" />
     <Compile Include="Search\SearchResultViewModel.cs" />
     <Compile Include="Search\Statistic.cs" />
     <Compile Include="Types\CheckableBase.cs" />
     <Compile Include="Screens\Card\Managers\AppointmentsSpecialCaseManager.cs" />
-    <Compile Include="Screens\Card\AppointmentViewModel.cs" />
+    <Compile Include="Screens\Card\Holders\AppointmentViewModel.cs" />
     <Compile Include="Screens\Card\Managers\CoursesManager.cs" />
-    <Compile Include="Screens\Card\CourseWithSpecialCaseViewModel.cs" />
-    <Compile Include="Screens\DiagnosisViewModel.cs" />
+    <Compile Include="Screens\Card\Holders\CourseWithSpecialCaseViewModel.cs" />
+    <Compile Include="Search\Autocomplete\DiagnosisViewModel.cs" />
     <Compile Include="Screens\Card\Managers\HealthRecordManager.cs" />
     <Compile Include="Screens\Card\HealthRecordViewModel.cs" />
     <Compile Include="Screens\Words\WordViewModel.cs" />
