--- a/Diagnosis.App/Diagnosis.App.csproj
+++ b/Diagnosis.App/Diagnosis.App.csproj
@@ -252,7 +252,7 @@
     </Compile>
     <Compile Include="Controls\Common\AlignableWrapPanel.cs" />
     <Compile Include="Controls\Common\WrapPanelLastChildFill.cs" />
-    <Compile Include="Controls\CardParts\SpecialCaseDataTemplateSelector.cs" />
+    <Compile Include="Controls\Common\SpecialCaseDataTemplateSelector.cs" />
     <Compile Include="Controls\Common\UndoOverlay.xaml.cs">
       <DependentUpon>UndoOverlay.xaml</DependentUpon>
     </Compile>
