--- a/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
+++ b/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
@@ -228,9 +228,9 @@
     <Compile Include="Screens\SearchViewModel.cs" />
     <Compile Include="Screens\SettingsViewModel.cs" />
     <Compile Include="Screens\Words\WordsListViewModel.cs" />
-    <Compile Include="Search\Autocomplete\Autocomplete.cs" />
+    <Compile Include="Search\Autocomplete\AutocompleteViewModel.cs" />
     <Compile Include="Search\Autocomplete\Recognizer.cs" />
-    <Compile Include="Search\Autocomplete\Tag.cs" />
+    <Compile Include="Search\Autocomplete\TagViewModel.cs" />
     <Compile Include="Search\FilterViewModel.cs" />
     <Compile Include="Search\HrSearchOptions.cs" />
     <Compile Include="Search\SpecSearchers\DiagnosisSearchers.cs" />
