--- a/Diagnosis.App/Diagnosis.App.csproj
+++ b/Diagnosis.App/Diagnosis.App.csproj
@@ -299,22 +299,22 @@
     <Compile Include="Screens\Doctors.xaml.cs">
       <DependentUpon>Doctors.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Windows\DoctorEditorWindow.xaml.cs">
+    <Compile Include="Windows\Editors\DoctorEditorWindow.xaml.cs">
       <DependentUpon>DoctorEditorWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Windows\HelpWindow.xaml.cs">
       <DependentUpon>HelpWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Windows\MeasureEditorWindow.xaml.cs">
+    <Compile Include="Windows\Editors\MeasureEditorWindow.xaml.cs">
       <DependentUpon>MeasureEditorWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Windows\WordEditorWindow.xaml.cs">
+    <Compile Include="Windows\Editors\WordEditorWindow.xaml.cs">
       <DependentUpon>WordEditorWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Windows\IcdSelectorWindow.xaml.cs">
       <DependentUpon>IcdSelectorWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Windows\PatientEditorWindow.xaml.cs">
+    <Compile Include="Windows\Editors\PatientEditorWindow.xaml.cs">
       <DependentUpon>PatientEditorWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\Editors\SexChooser.xaml.cs">
@@ -372,10 +372,10 @@
     <Compile Include="Controls\Common\FullTree.xaml.cs">
       <DependentUpon>FullTree.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Windows\AppointmentEditorWindow.xaml.cs">
+    <Compile Include="Windows\Editors\AppointmentEditorWindow.xaml.cs">
       <DependentUpon>AppointmentEditorWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Windows\CourseEditorWindow.xaml.cs">
+    <Compile Include="Windows\Editors\CourseEditorWindow.xaml.cs">
       <DependentUpon>CourseEditorWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Windows\DebugWindow.xaml.cs">
@@ -472,7 +472,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Windows\DoctorEditorWindow.xaml">
+    <Page Include="Windows\Editors\DoctorEditorWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -480,11 +480,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Windows\MeasureEditorWindow.xaml">
+    <Page Include="Windows\Editors\MeasureEditorWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Windows\WordEditorWindow.xaml">
+    <Page Include="Windows\Editors\WordEditorWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -492,7 +492,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Windows\PatientEditorWindow.xaml">
+    <Page Include="Windows\Editors\PatientEditorWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -544,11 +544,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Windows\AppointmentEditorWindow.xaml">
+    <Page Include="Windows\Editors\AppointmentEditorWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Windows\CourseEditorWindow.xaml">
+    <Page Include="Windows\Editors\CourseEditorWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -710,6 +710,7 @@
   <ItemGroup>
     <Resource Include="Resources\Images\Find_5650.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
