tests. Search results ordered

--- a/Diagnosis.Tests/Diagnosis.Tests.csproj
+++ b/Diagnosis.Tests/Diagnosis.Tests.csproj
@@ -153,6 +153,7 @@
     <Compile Include="CommonTests\StringExtensionTest.cs" />
     <Compile Include="ViewModelsTests\HrEditorTest.cs" />
     <Compile Include="ModelTests\OrderedBagTest.cs" />
+    <Compile Include="ViewModelsTests\SearchTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Diagnosis.App\Diagnosis.App.csproj">
