--- a/Diagnosis.Common/Diagnosis.Common.csproj
+++ b/Diagnosis.Common/Diagnosis.Common.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Extensions\EnumerableExtensions.cs" />
     <Compile Include="Formatters\NameFormatter.cs" />
     <Compile Include="Formatters\Plurals.cs" />
+    <Compile Include="Interfaces\IClipboardTarget.cs" />
     <Compile Include="Interfaces\IMan.cs" />
     <Compile Include="Types\DisposableBase.cs" />
     <Compile Include="Types\INCCReadOnlyObservableCollection.cs" />
