--- a/Diagnosis.Tests/Diagnosis.Tests.csproj
+++ b/Diagnosis.Tests/Diagnosis.Tests.csproj
@@ -139,6 +139,7 @@
     <Compile Include="ModelTests\HealthRecordTest.cs" />
     <Compile Include="SearchTests\DiagnosisSearchTest.cs" />
     <Compile Include="ViewModelsTests\AutocompleteTest.cs" />
+    <Compile Include="ViewModelsTests\HrListTest.cs" />
     <Compile Include="ViewModelsTests\CardTest.cs" />
     <Compile Include="CommonTests\SequencePartitionTest.cs" />
     <Compile Include="CommonTests\DateFormatterTest.cs" />
