--- a/Diagnosis.Common/Diagnosis.Common.csproj
+++ b/Diagnosis.Common/Diagnosis.Common.csproj
@@ -161,6 +161,7 @@
     <Compile Include="Types\NotifyPropertyChangedBase.cs" />
     <Compile Include="Mediator\EventMessageHandlersManager.cs" />
     <Compile Include="Util\FileHelper.cs" />
+    <Compile Include="Util\LocalizableDescriptionAttribute.cs" />
     <Compile Include="Util\PasswordService.cs" />
     <Compile Include="Util\PerformanceTester.cs" />
     <Compile Include="Util\ReflectionHelper.cs" />
