--- a/Diagnosis.App/Resources/avalon-layout.config
+++ b/Diagnosis.App/Resources/avalon-layout.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-16"?>
+﻿<?xml version="1.0" encoding="utf-16"?>
 <LayoutRoot xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
   <RootPanel Orientation="Horizontal">
     <LayoutAnchorablePane Id="7896874a-62cd-4d5b-b5f5-01f3f3e0ad4e" Name="Screen" DocMinWidth="320">
