search. Add null category

--- a/Diagnosis.Tests/Diagnosis.Tests.csproj
+++ b/Diagnosis.Tests/Diagnosis.Tests.csproj
@@ -137,6 +137,7 @@
     <Compile Include="CommonTests\EnumerableExtensionsTest.cs" />
     <Compile Include="ModelTests\CourseTest.cs" />
     <Compile Include="ModelTests\HealthRecordTest.cs" />
+    <Compile Include="ModelTests\HrCategoryTest.cs" />
     <Compile Include="SearchTests\DiagnosisSearchTest.cs" />
     <Compile Include="ViewModelsTests\AutocompleteTest.cs" />
     <Compile Include="ViewModelsTests\HrListTest.cs" />
